add a robot section to the buildout script

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -13,6 +13,7 @@ parts +=
     mrbob
     i18ndude
     code-analysis
+    robot
 
 extensions = mr.developer
 auto-checkout = *
@@ -56,6 +57,14 @@ eggs = i18ndude
 [code-analysis]
 recipe = plone.recipe.codeanalysis
 directory = ${buildout:directory}/src
+
+[robot]
+recipe = zc.recipe.egg
+eggs =
+    ${test:eggs}
+    plone.app.robotframework[debug,reload]
+
+
 
 [sources]
 plone.restapi = git https://github.com/plone/plone.restapi.git branch=master
