add code-analysis to the buildout.cfg script

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,6 +2,7 @@
 extends =
     buildout.d/plone-5.2.x.cfg
     buildout.d/core.cfg
+    buildout.d/code-analysis.cfg
 
 index = https://pypi.python.org/simple
 
