--- a/versions.cfg
+++ b/versions.cfg
@@ -1,22 +1,24 @@
 [versions]
 Deprecated = 1.2.6
-GitPython = 3.0.2
+GitPython = 3.0.4
 PyYAML = 5.1.2
 SecretStorage = 3.1.1
 asn1crypto = 0.24.0
-bobtemplates.plone = 4.1.3
-flake8 = 3.7.8
-gitdb2 = 2.0.5
+bobtemplates.plone = 5.0.3
+flake8 = 3.7.9
+flake8-coding = 1.3.2
+flake8-print = 3.1.4
+gitdb2 = 2.0.6
 lazr.restfulclient = 0.14.2
 mccabe = 0.6.1
 mr.bob = 0.1.2
 pathtools = 0.1.2
 plone.recipe.codeanalysis = 3.0.1
-prompt-toolkit = 1.0.16
+prompt-toolkit = 1.0.18
 pycodestyle = 2.5.0
 pyflakes = 2.1.1
-pyroma = 2.5
-regex = 2019.8.19
+pyroma = 2.6
+regex = 2019.11.1
 smmap2 = 2.0.5
 watchdog = 0.9.0
 wrapt = 1.11.2
@@ -25,7 +27,7 @@ zest.pocompile = 1.4
 
 # Required by:
 # plone.releaser==1.7.2
-PyGithub = 1.43.8
+PyGithub = 1.44
 
 # Required by:
 # plone.releaser==1.7.2
@@ -40,20 +42,20 @@ argh = 0.26.2
 cached-property = 1.5.1
 
 # Required by:
-# bobtemplates.plone==4.1.3
+# bobtemplates.plone==5.0.3
 case-conversion = 2.1.0
 
 # Required by:
 # plone.recipe.codeanalysis==3.0.1
-check-manifest = 0.39
+check-manifest = 0.40
 
 # Required by:
 # plone.releaser==1.7.2
-configparser = 4.0.1
+configparser = 4.0.2
 
 # Required by:
 # SecretStorage==3.1.1
-cryptography = 2.7
+cryptography = 2.8
 
 # Required by:
 # lazr.restfulclient==0.14.2
@@ -65,7 +67,7 @@ entrypoints = 0.3
 
 # Required by:
 # launchpadlib==1.10.7
-httplib2 = 0.13.1
+httplib2 = 0.14.0
 
 # Required by:
 # SecretStorage==3.1.1
@@ -94,6 +96,10 @@ oauthlib = 3.1.0
 progress = 1.5
 
 # Required by:
+# flake8-print==3.1.4
+pycodestyle = 2.5.0
+
+# Required by:
 # z3c.dependencychecker==2.7
 stdlib-list = 0.5.0
 
@@ -106,5 +112,5 @@ testresources = 2.0.1
 wadllib = 1.3.3
 
 # Required by:
-# prompt-toolkit==1.0.16
-wcwidth = 0.1.7 
+# prompt-toolkit==1.0.18
+wcwidth = 0.1.7
