Update code-analysis section.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -57,8 +57,9 @@ recipe = zc.recipe.egg
 eggs = i18ndude
 
 [code-analysis]
-recipe = plone.recipe.codeanalysis
+recipe = plone.recipe.codeanalysis[recommended]
 directory = ${buildout:directory}/src
+return-status-codes = False
 
 [robot]
 recipe = zc.recipe.egg
