--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,11 @@ cache:
   - eggs
   - downloads
 python:
-  - "3.7"
+  - "2.7"
 matrix:
   include:
+    - python: "2.7"
+      env: PLONE_VERSION=52
     - python: "3.7"
       env: PLONE_VERSION=52
       dist: xenial
@@ -27,7 +29,7 @@ before_install:
   - cp test_plone$PLONE_VERSION.cfg buildout.cfg
 
 install:
-#  - bin/buildout -N -t 3 code-analysis:return-status-codes=True annotate
+  - bin/buildout -N -t 3 code-analysis:return-status-codes=True annotate
   - bin/buildout -N -t 3 code-analysis:return-status-codes=True
 
 before_script:
