--- a/buildout.cfg
+++ b/buildout.cfg
@@ -24,6 +24,7 @@ eggs +=
     plone.restapi
     collective.folderishtypes
     Products.PrintingMailHost
+    Products.PloneHotfix20200121
 
 [instance]
 recipe = plone.recipe.zope2instance
