--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ python:
 matrix:
   include:
     - python: "2.7"
+      env: PLONE_VERSION=51
+    - python: "2.7"
       env: PLONE_VERSION=52
     - python: "3.7"
       env: PLONE_VERSION=52
@@ -19,7 +21,7 @@ matrix:
 before_install:
   - virtualenv -p `which python` .
   - mkdir -p $HOME/buildout-cache/{eggs,downloads}
-  - mkdir -p $HOME/.buildout
+  - mkdir $HOME/.buildout
   - echo "[buildout]" > $HOME/.buildout/default.cfg
   - echo "download-cache = $HOME/buildout-cache/downloads" >> $HOME/.buildout/default.cfg
   - echo "eggs-directory = $HOME/buildout-cache/eggs" >> $HOME/.buildout/default.cfg
