fix travis and buildout

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,74 +1,7 @@
 [buildout]
 extends =
-    buildout.d/plone-5.2.x.cfg
-    buildout.d/core.cfg
-    buildout.d/code-analysis.cfg
-
-index = https://pypi.python.org/simple
-
-find-links =
-    https://pypi.python.org/simple
-parts +=
-    instance
-    test
-    mrbob
-    i18ndude
-    code-analysis
-    robot
-
-extensions = mr.developer
-auto-checkout = *
-always-checkout = force
-
-eggs +=
-    plone.restapi
-    collective.folderishtypes
-    Products.PrintingMailHost
-
-[instance]
-recipe = plone.recipe.zope2instance
-http-address = 8080
-user = admin:admin
-eggs =
-    Plone
-    Pillow
-    ${buildout:eggs}
-
-environment-vars =
-    zope_i18n_compile_mo_files true
-
-zcml =
-
-
-[test]
-recipe = collective.xmltestreport
-eggs = ${instance:eggs}
-defaults = ['--auto-color', '--auto-progress']
-
-[mrbob]
-recipe = zc.recipe.egg
-eggs =
-    mr.bob
-    bobtemplates.plone
-
-[i18ndude]
-unzip = true
-recipe = zc.recipe.egg
-eggs = i18ndude
-
-[code-analysis]
-recipe = plone.recipe.codeanalysis[recommended]
-directory = ${buildout:directory}/src
-return-status-codes = False
-
-[robot]
-recipe = zc.recipe.egg
-eggs =
-    ${test:eggs}
-    plone.app.robotframework[debug,reload]
-
-
-
-[sources]
-plone.restapi = git https://github.com/plone/plone.restapi.git branch=master
-collective.folderishtypes = git https://github.com/collective/collective.folderishtypes.git branch=master
+# -*- mrbob: extra extends -*-
+#    test_plone43.cfg
+#    test_plone50.cfg
+#    test_plone51.cfg
+    test_plone52.cfg
